Fixed spacing on external icon

--- a/Styles/global/3_blocks/_feature-small.less
+++ b/Styles/global/3_blocks/_feature-small.less
@@ -24,9 +24,7 @@
 	}
 	&__link-icon {
 		display: inline-block;
-		position: absolute;
-		margin-top: @spacing--xsmall;
-		margin-left: @spacing--small;
+		margin-left: @spacing--xsmall;
 		width: 1em;
 		height: 1em;
 	}
