--- a/Styles/global/3_blocks/_feature.less
+++ b/Styles/global/3_blocks/_feature.less
@@ -97,9 +97,6 @@
 	}
   &__link-icon {
     display: inline-block;
-    position: absolute;
-    margin-top: @spacing--small;
-    margin-left: @spacing--small;
     width: 0.8em;
     height: 0.8em;
   }
