--- a/public/styles.css
+++ b/public/styles.css
@@ -5701,9 +5701,7 @@ blockquote small {
 }
 .feature-small__link-icon {
   display: inline-block;
-  position: absolute;
-  margin-top: 5px;
-  margin-left: 7px;
+  margin-left: 5px;
   width: 1em;
   height: 1em;
 }
@@ -5961,9 +5959,6 @@ blockquote small {
 }
 .feature__link-icon {
   display: inline-block;
-  position: absolute;
-  margin-top: 7px;
-  margin-left: 7px;
   width: 0.8em;
   height: 0.8em;
 }
